blueroses.css
/* ... */
	
/*classic breadcrumbs - everywhere*/
#Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}

/*div.ThirdPartyModule {
    margin-left: 2px;
    margin-right: 2px;
}*/

/*contrast fix*/
.TitleOnly > ul > li itemcount {color:#ff9bcf !important;}

nav#PrimaryNav > module > pane {
    border:2px solid #fc4b7f !important;
    border-top:none !important;
    border-radius: 0px 0px 18px 18px !important;
    overflow:hidden;
}

@media only screen and (min-width : 1001px) {
a#SiteLogo > img {
	background:url("https://files.gamebanana.com/bitpit/logdfgdfgdfgo.gif");
        background-size:308px 32px;
    
        filter:none !important;
       
        width: 308px;
        height: 32px;
        display:block;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
        padding-left: 308px;
    }#BananaNavModule > widget > a {filter:none !important;}
    a#SiteLogo {filter:none !important;}
}
@media only screen and (max-width : 1000px) {
    
}

